--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        <div class="navline"><h1 class="font1">Rubik's Cube Statistics</h1><p class="mbu">Made by Utku</p></div>
     </header>
     <div class="buttons">
-      <a href="Ranker.html" class="button1">WCA Ranker</a>
-      <a href="Ao5Calculator.html" class="button2">Ao5 Calculator</a>
-      <a href="WCAStatistics.html" class="button3">WCA Statistics</a>
+      <a href="Ranker.html" class="rankerButton">WCA Ranker</a>
+      <a href="Ao5Calculator.html" class="calculatorButton">Ao5 Calculator</a>
+      <a href="WCAStatistics.html" class="statsButton">WCA Statistics</a>
     </div>
   </body>
 </html>
