--- a/Ranker.html
+++ b/Ranker.html
@@ -14,7 +14,29 @@
        <div class="navline"><h1 class="font1">Rubik's Cube Statistics</h1><p class="mbu">Made by Utku</p></div>
     </header>
     <div class="container">
-        <p class="p3">This is a tool to tell you where your average time on a puzzle would rank you amongst official WCA results!</p>
+        <p class="rankerp1">This is a tool to tell you where your average time on a puzzle would rank you amongst official WCA results!</p>
+        <div>
+          <label class="eventPickerLabel" for="event">Select event: </label>
+          <select class="eventPicker" id="event">
+            <option value="222">2x2x2 Cube</option>
+            <option value="333">3x3x3 Cube</option>
+            <option value="444">4x4x4 Cube</option>
+            <option value="555">5x5x5 Cube</option>
+            <option value="666">6x6x6 Cube</option>
+            <option value="777">7x7x7 Cube</option>
+            <option value="333bf">3x3x3 Blindfolded</option>
+            <option value="333fm">3x3x3 Fewest Moves</option>
+            <option value="333oh">3x3x3 One-Handed</option>
+            <option value="clock">Clock</option>
+            <option value="minx">Megaminx</option>
+            <option value="pyram">Pyraminx</option>
+            <option value="skewb">Skewb</option>
+            <option value="sq1">Square-1</option>
+            <option value="444bf">4x4x4 Blindfolded</option>
+            <option value="555bf">5x5x5 Blindfolded</option>
+            <option value="333mbf">3x3x3 Multi-Blind</option>
+          </select>
+        </div>
     </div>
 </body>
 </html>
