--- a/WCAStatistics.html
+++ b/WCAStatistics.html
@@ -14,7 +14,7 @@
        <div class="navline"><h1 class="font1">Rubik's Cube Statistics</h1><p class="mbu">Made by Utku</p></div>
     </header>
     <div class="container">
-        <p class="p1">Enter your WCA ID to see detailed statistics about your WCA profile!</p>
+        <p class="statsp1">Enter your WCA ID to see detailed statistics about your WCA profile!</p>
     </br>
         <form>
             <div style="margin-top: 10px; margin-bottom: 10px;">
