--- a/Ao5Calculator.html
+++ b/Ao5Calculator.html
@@ -15,7 +15,17 @@
     </header>
     <div class="container">
         <!-- <h1>Canım Ablacım :)</h1> -->
-        <p class="p2">This is a tool to calculate what 5th time you need to get for a desired Ao5.</p>
+        <p class="calcp1">This is a tool to calculate what 5th time you need to get for a desired Ao5.</p>
+        <div class="times">
+          <label class="time1label" for="time">Time 1:</label>
+          <input id="time1" type="text" step="any" value="">
+          <label class="time2label" for="time">Time 2:</label>
+          <input id="time2" type="text" step="any" value="">
+          <label class="time3label" for="time">Time 3:</label>
+          <input id="time3" type="text" step="any" value="">
+          <label class="time4label" for="time">Time 4:</label>
+          <input id="time4" type="text" step="any" value="">
+        </div>
     </div>
   </body>
 </html>
