--- a/Ranker.html
+++ b/Ranker.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-       <div class="navline"><h1 class="font1">Rubik's Cube Statistics</h1><p class="mbu">Made by Utku</p></div>
+       <div class="navline"><h1 class="font1"><a href="index.html" class="menuButton">Rubik's Cube Statistics</a></h1><p class="mbu">Made by Utku</p></div>
     </header>
     <div class="container">
         <p class="rankerp1">This is a tool to tell you where your average time on a puzzle would rank you amongst official WCA results!</p>
@@ -36,6 +36,9 @@
             <option value="555bf">5x5x5 Blindfolded</option>
             <option value="333mbf">3x3x3 Multi-Blind</option>
           </select>
+        </br>
+        <label class="averageTimeLabel" for="time">Your average time (in seconds):</label>
+        <input id="averageTime" type="number" step="any" value="">
         </div>
     </div>
 </body>
