--- a/WCAStatistics.html
+++ b/WCAStatistics.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-       <div class="navline"><h1 class="font1">Rubik's Cube Statistics</h1><p class="mbu">Made by Utku</p></div>
+       <div class="navline"><h1 class="font1"><a href="index.html" class="menuButton">Rubik's Cube Statistics</a></h1><p class="mbu">Made by Utku</p></div>
     </header>
     <div class="container">
         <p class="statsp1">Enter your WCA ID to see detailed statistics about your WCA profile!</p>
